# keep_your_distance_game

./: CMakeLists.txt  README.md
src/: GameObject.cpp  GameObject.h  Item.cpp  Item.h  Person.cpp  Person.h  Player.cpp  Player.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h
